[package]
name = "api"
version = "0.1.0"
edition = "2021"

[lib]
name = "pman_api_lib"
path = "src/lib.rs"

[dependencies]
reqwest = "0.12.9"
ring = "0.17.8"
sha2 = "0.10.8"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.216", features = ["derive"] }
toml = "0.8.19"
uuid = { version = "1.11.0", features = ["v4"] }
